--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
+    "gulp-serve": "^1.2.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "node-notifier": "^4.4.0",
-    "node-static": "^0.7.7",
     "reactify": "^1.1.1",
     "sync-request": "^2.1.0",
     "vinyl-source-stream": "^1.1.0",
