--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
+    "loose-envify": "^1.1.0",
     "node-notifier": "^4.4.0",
     "reactify": "^1.1.1",
     "sync-request": "^2.1.0",
