--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "es6ify": "^1.6.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-envify": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-serve": "^1.2.0",
@@ -24,7 +25,6 @@
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-    "loose-envify": "^1.1.0",
     "node-notifier": "^4.4.0",
     "reactify": "^1.1.1",
     "sync-request": "^2.1.0",
