Use FastClick library; implement aciton queue; reuse DateTimePIcker from desktop

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "es6-promise": "^3.0.2",
+    "fastclick": "^1.0.6",
     "input-moment": "0.0.6",
     "moment": "^2.11.0",
     "react": "^0.14.3",
