--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   },
   "dependencies": {
     "es6-promise": "^3.0.2",
-    "fastclick": "^1.0.6",
     "input-moment": "0.0.6",
     "moment": "^2.11.0",
     "react": "^0.14.3",
     "react-addons-update": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.2",
+    "react-tappable": "^0.8.0",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.1",
     "redux-thunk": "^1.0.3"
