--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "http://github.com/koluch/moneytrack"
+    "url": "http://github.com/moneytrack/frontend"
   },
   "devDependencies": {
     "anybar": "^1.0.0",
@@ -18,6 +18,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-envify": "^1.0.0",
+    "gulp-manifest": "^0.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-serve": "^1.2.0",
@@ -25,6 +26,7 @@
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
+    "merge-stream": "^1.0.0",
     "node-notifier": "^4.4.0",
     "reactify": "^1.1.1",
     "sync-request": "^2.1.0",
@@ -35,7 +37,6 @@
     "es6-promise": "^3.0.2",
     "moment": "^2.11.0",
     "react": "^0.14.3",
-    "react-addons-update": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.2",
     "react-tappable": "^0.8.0",
